--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
     </div>
 </div>
 <svg></svg>
-<script type="module" src="/src/main.ts"></script>
+<script type="module" src="./src/main.ts"></script>
 <script type="module">
-  import { d3, forceProperties, updateAll } from "/src/main.ts";
-  window.d3 = d3;
-  window.forceProperties = forceProperties;
-  window.updateAll = updateAll;
+    import { d3, forceProperties, updateAll } from "/src/main.ts";
+    window.d3 = d3;
+    window.forceProperties = forceProperties;
+    window.updateAll = updateAll;
 </script>
 </body>
 </html>
